--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "yup": "^1.3.2"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.200",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
