--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "reflect-metadata": "^0.1.13",
         "slick-carousel": "^1.8.1",
         "typedi": "^0.10.0",
+        "uuid": "^9.0.1",
         "web-vitals": "^3.5.0",
         "yup": "^1.3.2"
     },
@@ -52,6 +53,7 @@
         "@types/lodash": "^4.14.200",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^4.1.0",
