--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-slick": "^0.29.0",
         "react-spinners": "^0.13.8",
         "react-timer-hook": "^3.0.7",
+        "react-to-print": "^2.14.15",
         "redux": "^4.2.1",
         "redux-persist": "^6.0.0",
         "reflect-metadata": "^0.1.13",
