--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
         "@mui/icons-material": "^5.14.14",
         "@mui/lab": "^5.0.0-alpha.149",
         "@mui/material": "^5.14.14",
+        "@mui/system": "^5.14.18",
+        "@mui/x-date-pickers": "^6.18.1",
         "@reduxjs/toolkit": "^1.9.7",
         "@tabler/icons": "^2.39.0",
         "@tabler/icons-react": "^2.39.0",
         "@types/node": "^20.8.6",
         "@types/react-slick": "^0.23.11",
         "axios": "^1.6.0",
+        "date-fns": "^2.30.0",
         "eslint-config-prettier": "^9.0.0",
         "formik": "^2.4.5",
         "framer-motion": "^10.16.4",
